--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
       <button onclick="submitForm()">Submit</button>
       <div id="message" class="message"></div>
-      <div class="footer">&copy; Developed By Cuo Abhinav</div>
+      <div class="footer">&copy; Developed By Flt Cdt Milan Singh</div>
     </div>
 
     
@@ -325,6 +325,7 @@
     </script>
   </body>
 </html>
+
 
 
 
