--- a/index.html
+++ b/index.html
@@ -386,11 +386,48 @@
     }
     function getPDF() {
         const target = document.getElementById('pdfTarget').value;
-        fetch(SCRIPT_URL, { method: 'POST', body: JSON.stringify({ action: 'get_pdf', target: target, pin: "2347" }) }).then(r => r.json()).then(d => { if(d.status === 'success') window.open(d.url, '_blank'); else alert(d.message); });
+        const btn = document.querySelector('button[onclick="getPDF()"]');
+        const originalText = btn.innerText;
+        
+        // 1. Show Loading State
+        btn.innerText = "Generating...";
+        btn.disabled = true;
+
+        fetch(SCRIPT_URL, { 
+            method: 'POST', 
+            body: JSON.stringify({ action: 'get_pdf', target: target, pin: "2347" }) 
+        })
+        .then(r => r.json())
+        .then(d => { 
+            // 2. Reset Button
+            btn.innerText = originalText;
+            btn.disabled = false;
+
+            if(d.status === 'success') {
+                // --- MOBILE DOWNLOAD FIX ---
+                // Instead of window.open, we create a hidden link and click it.
+                // This tells mobile browsers "Download this file" instead of "Open this app".
+                let a = document.createElement('a');
+                a.href = d.url;
+                a.download = target + "_Report.pdf"; // Suggests a filename
+                a.target = '_blank';
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+            } else {
+                alert(d.message); 
+            }
+        })
+        .catch(error => {
+            btn.innerText = originalText;
+            btn.disabled = false;
+            alert("Network Error. Please try again.");
+        });
     }
 </script>
 </body>
 </html>
+
 
 
 
