--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <select id="pdfTarget" style="background:#444; color:white; border:none; margin-top:5px;">
                     <option value="Attendance">Attendance (Total Strength)</option>
                 </select>
-                <button class="btn-admin" style="width:100%; background:#0288d1;" onclick="getPDF()">Download PDF 📥</button>
+                <button class="btn-admin" style="width:100%; background:#0288d1;" <button onclick="getPDF()">SEE DETAILS 📋</button>
             </div>
 
             <div class="admin-section" style="border:none;">
